# qa-autotests

./: .gitignore  FIXTURES.md  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt
src/: __init__.py
src/app/: api_client.py  calculator.py  collections.py  strings.py  validators.py
tests/: conftest.py
tests/api/: conftest.py  test_comments_by_post.py  test_negative_endpoints.py  test_posts_create.py  test_posts_get_by_id.py  test_posts_list.py  test_posts_list_sampled.py  test_posts_smoke.py  test_posts_update_delete.py
tests/helpers/: api_contracts.py
tests/unit/: conftest.py  test_calculator.py  test_collections.py  test_strings.py  test_validators.py
